--- a/style.css
+++ b/style.css
@@ -1,25 +1,39 @@
 * {
     margin: 0;
     padding: 0;
-    background-color: yellow;
+    background-color:yellow;
     list-style: none;
     text-decoration: none;
 }
 
 button {
-    border: 2px solid black;
-    border-radius: 50px; /* Cantos arredondados */
     width: 90px;
-    height: 30px;
-}
-h1 {
-    font-size: 24px;
+    height: 40px;
+    background-color: #d21617;
+    color: #fff;
+    padding: 8px 10px;
+    border-radius: 100px;
+    cursor: pointer;
+    display: flexbox;
+    justify-content: center;
+    align-items: center;
     font-weight: bold;
-}
+    outline: none;
+    margin-top: 10px;
+    flex-direction: column;
+}   
+
 
 p {
-    font-size: 14px;
-    line-height: 1.5;
+    color: black;
+    font-size: 17px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    justify-content: left;
+    align-items: start;
+    display: flex;
+    margin-bottom: 10px;
 }
 
 img {
@@ -28,14 +42,17 @@ img {
 }
 
 header {
-    height: 90px;
+    height: 100px;
     display: flex;
+    flex-direction: column;
     justify-content: space-around;
     align-items: center;
 }
 
 nav {
-    width: 60%;
+    width: 50%;
+    height: 50%;
+    margin-bottom: 10px;
 }
 
 ul {
@@ -52,15 +69,32 @@ ul {
 .cards {
     width: 50%;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    row-gap: 20px;
-    column-gap: 10px;
+    cursor: pointer;
+    grid-template-columns: repeat(6, 1fr);
+    row-gap: 50px;
+    column-gap: 20px;
+    margin-left: 20px;
 }
 
-p {
-    color: black;
-    font-size: 25px;
-    font-family: 'Kdam Thmor Pro', sans-serif;
-    padding-top: 10px;
+
+footer {
+    height: 90px;
+    display: flex;
+    margin-top: 20px;
+    flex-direction: column;
+    justify-content: space-around;
     align-items: center;
+}
+
+#Castlevania {
+    width: 250px; 
+    height: auto;
+    margin-top: 20px;
+    margin-left: 10px;
+}
+
+h1 {
+    color: black;
+    margin-top: 10px;
+    flex-direction: row;
 }
