--- a/style.css
+++ b/style.css
@@ -1,40 +1,28 @@
 * {
     margin: 0;
     padding: 0;
-    background-color:yellow;
+    background-color: white;
     list-style: none;
     text-decoration: none;
 }
 
-button {
+#navegacao {
     width: 90px;
     height: 40px;
-    background-color: #d21617;
+    background-color: #0a0a0a;
     color: #fff;
     padding: 8px 10px;
-    border-radius: 100px;
+    border-radius: 5px;
     cursor: pointer;
-    display: flexbox;
+    display: flex;
     justify-content: center;
     align-items: center;
     font-weight: bold;
     outline: none;
     margin-top: 10px;
     flex-direction: column;
+    margin-left: 50px;
 }   
-
-
-p {
-    color: black;
-    font-size: 17px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    justify-content: left;
-    align-items: start;
-    display: flex;
-    margin-bottom: 10px;
-}
 
 img {
     width: 200px;
@@ -73,7 +61,7 @@ ul {
     grid-template-columns: repeat(6, 1fr);
     row-gap: 50px;
     column-gap: 20px;
-    margin-left: 20px;
+    margin-left: 50px;
 }
 
 
@@ -90,11 +78,73 @@ footer {
     width: 250px; 
     height: auto;
     margin-top: 20px;
-    margin-left: 10px;
+    margin-left: 630px;
+}
+ 
+p {
+    color: black;
+    font-size: 20px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    vertical-align: top;
+    display: grid;
+    margin-bottom: 10px;
+    margin-left:50px;
 }
 
-h1 {
+#listajogos {
     color: black;
-    margin-top: 10px;
-    flex-direction: row;
+    font-size: 25px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    vertical-align: top;
+    display: grid;
+    margin-bottom: 10px;
+    margin-left:670px;
 }
+
+form {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    display: flexbox;
+    flex-direction: column;
+    margin-left: 50px;
+    margin-top: 1px;
+}
+
+#salvar {
+    width: 90px;
+    height: 40px;
+    background-color: #056227;
+    color: #fff;
+    padding: 8px 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    outline: none;
+    margin-top: 0px;
+    margin-left: 50px;
+    flex-direction: row;
+}   
+
+#cancelar {
+    width: 90px;
+    height: 40px;
+    background-color: #f80000;
+    color: #fff;
+    padding: 8px 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    outline: none;
+    margin-top: 10px;
+    margin-left: 50px;
+    flex-direction: row;
+}   
