--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
     }
 
 header {
-    background-color: #000000;
+    background-color: orange;
     padding: 10px 0;
 }
 
@@ -25,7 +25,7 @@ nav {
 }
 
 nav .logo {
-    color: #fff;
+    color: #000000;
     font-size: 24px;
     font-weight: bold;
 }
@@ -40,15 +40,16 @@ nav ul li {
 }
 
 nav ul li a {
-    color: #fff;
+    color: #000000;
     text-decoration: none;
     font-size: 18px;
     transition: color 0.3s;
 }
 
 nav ul li a:hover {
-    color: #ff6347;
+    color: red;
 }
+
 
 .banner {
     background-size: cover;
@@ -114,8 +115,8 @@ nav ul li a:hover {
 }
 
 footer {
-    background-color: #000000;
-    color: #fff;
+    background-color: orange;
+    color: #000000;
     padding: 20px;
     text-align: center;
 }
@@ -363,4 +364,32 @@ h2 {
     body {
         font-size: 12px;
     }
+}
+
+#menu-toggle{
+    display: none;
+}
+
+.menu {
+    display: none;
+}
+
+.menu > a {
+    text-decoration: none;
+    color: black;
+    border: 2px solid black;
+    border-radius: 10px;
+    padding: 1px;
+    margin: 5px;
+    width: 80px;
+    text-align: center;
+}
+
+#menu-toggle:checked ~ .menu{
+    display: flex;
+    justify-content: center;
+}
+
+.hamburger-menu{
+    cursor: pointer;
 }
