--- a/styles2.css
+++ b/styles2.css
@@ -12,7 +12,7 @@ body {
 }
 
 header {
-    background-color: #000000;
+    background-color: orange;
     padding: 10px 0;
     width: 10px;
     width: 155px; 
@@ -33,7 +33,7 @@ nav {
 }
 
 nav .logo {
-    color: #fff;
+    color: #000000;
     font-size: 40px;
     font-weight: bold;
     margin-bottom: 30px;
@@ -54,7 +54,7 @@ nav ul li {
 
 nav ul li a {
     display: block;
-    color: #fff;
+    color: #000000;
     text-decoration: none;
     font-size: 18px;
     padding: 10px 20px;
@@ -63,6 +63,12 @@ nav ul li a {
 
 nav ul li a:hover {
     color: #ff6347;
+}
+
+h2 {
+    text-align: center;
+    margin-bottom: 20px;
+    color: #333;
 }
 
 .games {
@@ -77,10 +83,11 @@ nav ul li a:hover {
 
 .game-cards {
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
     gap: 20px;
-    flex-direction: unset;
 }
 
 .game-card {
@@ -115,8 +122,58 @@ nav ul li a:hover {
 }
 
 footer {
-    background-color: #000000;
-    color: #fff;
-    padding: 40px;
+    background-color: orange;
+    color: #000000;
+    padding: 55px;
     text-align: center;
+}
+
+#menu-toggle{
+    display: none;
+}
+
+.menu {
+    display: none;
+}
+
+.menu > a {
+    text-decoration: none;
+    color: black;
+    border: 2px solid black;
+    border-radius: 10px;
+    padding: 1px;
+    margin: 5px;
+    width: 80px;
+    text-align: center;
+}
+
+#menu-toggle:checked ~ .menu{
+    display: flex;
+    justify-content: first baseline;
+}
+
+.hamburger-menu{
+    cursor: pointer;
+}
+
+/* Estilos para telas médias (tablets) */
+@media (max-width: 768px) {
+    .container {
+        padding: 15px;
+
+    }
+    /* Ajuste de outros elementos, por exemplo, fontes menores */
+    body {
+        font-size: 14px;
+    }
+}
+
+/* Estilos para telas pequenas (celulares) */
+@media (max-width: 480px) {
+    .container {
+        padding: 10px;
+    }
+    body {
+        font-size: 12px;
+    }
 }
