--- a/styles.css
+++ b/styles.css
@@ -5,28 +5,25 @@
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     background-color: #ffffff;
     color: #000000;
     }
 
-header {
-    background-color: orange;
-    padding: 10px 0;
-}
 
 nav {
     display: flex;
+    font-weight: bold;
     justify-content: space-between;
     align-items: center;
-    max-width: 1200px;
+    max-width: 1000px;
     margin: 0 auto;
     padding: 0 20px;
 }
 
 nav .logo {
     color: #000000;
-    font-size: 24px;
+    font-size: 40px;
     font-weight: bold;
 }
 
@@ -393,3 +390,5 @@ h2 {
 .hamburger-menu{
     cursor: pointer;
 }
+
+
